# ca-bed

./: .gitignore  20q_prompts.py  README.md  chat_utils.py  direct_prompting_method.py  eval.py  experiment_logging.py  formal_prob.typ  history.py  loggers.py  main.py  mcts.py  method.py  models.py  node.py  pyproject.toml  question_clustering.py  rewards.py  root.pickle  test.ipynb  test.py
docs/: formal_prob.typ  iclr2025_conference.bib  iclr2025_conference.tex
src/ca_bed/: analysis.py  experiments.py  history.py  llm.py  method.py  node.py  rewards.py
src/ca_bed/methods/: direct_method.py  tree_based_method.py
src/ca_bed/tasks/: task.py
src/ca_bed/tasks/detective_cases/: DetectiveCases.json  bayesian.py  bayesian_multi.py  common.py  data.py  direct.py  oracle.py  uot.py
tasks/: direct_prompting_task.py  task.py
tasks/craft_md/: baseline.py  bayesian.py  data.py
tasks/detective_cases/: baseline.py  baseline_multi.py  bayesian.py  bayesian_multi.py  common.py  data.py  direct.py  uot.py
tasks/flodial/: baseline.py  bayesian.py  data.py  flodial.json
tasks/med_dg/: MedDG.json  baseline.py  baseline_multi.py  baseline_prompts.py  bayesian.py  bayesian_multi.py  bayesian_prompts.py  data.py  direct.py  tasks.py
tasks/movie_lens/: baseline.py  bayesian.py  common.py  data.py  direct.py  movielens_curated.json
tasks/twenty_questions/: baseline.py  baseline_prompts.py  bayesian.py  bayesian2.py  bayesian_logprobs.py  bayesian_multi.py  bayesian_prompts.py  data.py  direct.py  prompts.py  tasks.py  uot.py
tasks/twenty_questions_NB/: prompts.py  tasks.py
(+6 files in other folders)
