[project]
name = "uot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=1.101.0",
    "polars>=1.33.1",
    "sentence-transformers[onnx]>=5.1.0",
    "tenacity>=9.1.2",
    "voyager>=2.1.0",
]
