[project]
authors = [{ name = "Daniel", email = "darn0005@student.monash.edu" }]
dependencies = []
name = "ca-bed"
requires-python = ">= 3.14"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
ca_bed = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
openai = ">=2.26.0,<3"
python-dotenv = ">=1.2.2,<2"
loguru = ">=0.7.3,<0.8"
ipykernel = ">=7.2.0,<8"
